--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<div class="app">
-    <div>Creative App</div>
-    <router-outlet></router-outlet>
-</div>
+<mat-toolbar>We Will Rock You</mat-toolbar>
