added app main page

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,4 +1,9 @@
-.app {
-    height: 100%;
-    background-color: lightblue;
+.app-header-card {
+    margin: 8px;
+    background-color: coral;
+}
+
+.app-content-card {
+    margin: 8px;
+
 }
