--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<mat-toolbar>We Will Rock You</mat-toolbar>
+<mat-card class="app-header-card">We Will Rock You</mat-card>
 
-<mat-card></mat-card>
+<mat-card *ngIf="currentPage === 'user-info'" class="app-content-card">
+    <app-user-info></app-user-info>
+</mat-card>
+<mat-card *ngIf="currentPage === 'rock-info'" class="app-content-card">
+    <app-rock-info></app-rock-info>
+
+</mat-card>
