--- a/src/app/rock-info/rock-info.component.html
+++ b/src/app/rock-info/rock-info.component.html
@@ -1,3 +1,4 @@
 <div class="rock-info">
-    <div>User Info</div>
+    <div>Name: {{mineral.name}}</div>
+    <div>Scientific Name: {{mineral.sciName}}</div>
 </div>
