App works with one name

--- a/src/app/rock-info/rock-info.component.html
+++ b/src/app/rock-info/rock-info.component.html
@@ -1,4 +1,5 @@
 <div class="rock-info">
     <div>Name: {{mineral.name}}</div>
     <div>Scientific Name: {{mineral.sciName}}</div>
+    <button (click)="test()">Test</button>
 </div>
