fixed material theme

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,9 +1,9 @@
 .app-header-card {
     margin: 8px;
     background-color: coral;
+    font-size: 20px;
 }
 
 .app-content-card {
     margin: 8px;
-
 }
