--- a/src/app/rock-info/rock-info.component.html
+++ b/src/app/rock-info/rock-info.component.html
@@ -1,7 +1,8 @@
 <div class="rock-info">
-    <div>Name: {{firstNameMineral.name}}</div>
-    <div>Scientific Name: {{firstNameMineral.sciName}}</div>
-    <div>Name: {{lastNameMineral.name}}</div>
-    <div>Scientific Name: {{lastNameMineral.sciName}}</div>
-    Al<sub>13</sub>Si<sub>5</sub>O<sub>20</sub>(OH,F)<sub>18</sub>Cl
+    <div>Name: {{firstNameMineral.name | titlecase}}</div>
+    <div>Scientific Name: {{firstNameMineral.sciName | titlecase}}</div>
+    <img src="/assets/img/{{firstNameMineral.name | titlecase}}.jpg " alt="">
+    <div>Name: {{lastNameMineral.name | titlecase}}</div>
+    <div>Scientific Name: {{lastNameMineral.sciName | titlecase}}</div>
+    <img src="/assets/img/{{lastNameMineral.name | titlecase}}.jpg " alt="">
 </div>
