--- a/src/app/rock-info/rock-info.component.html
+++ b/src/app/rock-info/rock-info.component.html
@@ -1,5 +1,4 @@
 <div class="rock-info">
-    <div>Name: {{mineral.name}}</div>
-    <div>Scientific Name: {{mineral.sciName}}</div>
-    <button (click)="test()">Test</button>
+    <h3 class="f">Name: {{name()}}</h3>
+    <h5 class="f">Scientific Name: {{sciName()}}</h5>
 </div>
