cleaned up a little and added links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         <mat-card *ngIf="firstMineral" class="app-content-card">
             <div class="f">
                 <div class="line">
-                    <div class="text">Your Rock Stripper Name!</div>
+                    <div class="text">If you were a rock, you would be:</div>
                 </div>
             </div>
             <app-rock-info [firstMineral]="firstMineral" [lastMineral]="lastMineral"></app-rock-info>
