--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -3,9 +3,9 @@ body {
 }
 
 .app-header-card {
-    margin: 8px;
     background-color: coral;
     font-size: 20px;
+    margin-bottom: 6px;
 }
 
 .app-content-card {
@@ -33,13 +33,15 @@ body {
 .line {
     display: flex;
     justify-content: center;
-    width: 50%;
+    width: 80%;
+    padding-bottom: 5px;
     border-bottom:2px solid black;
 }
 
 .f {
     display: flex;
     justify-content: center;
+    text-align: center;
 }
 
 .fc {
@@ -47,4 +49,3 @@ body {
     flex-direction: column;
     align-items: center;
 }
-
