--- a/src/app/rock-info/rock-info.component.html
+++ b/src/app/rock-info/rock-info.component.html
@@ -1,4 +1,6 @@
 <div class="rock-info">
     <h3 class="f">Name: {{name()}}</h3>
-    <h5 class="f">Scientific Name: {{sciName()}}</h5>
+    <h5 class="f">{{sciName()}}</h5>
+    <a class="f" target=”_blank” href=”{{searchUrl(firstMineral.name)}}”>Learn more about: {{firstMineral['name']}}</a>
+    <a class="f" target=”_blank” href=”{{searchUrl(lastMineral.name)}}”>Learn more about: {{lastMineral['name']}}</a>
 </div>
