--- a/src/app/rock-info/rock-info.component.less
+++ b/src/app/rock-info/rock-info.component.less
@@ -1,4 +1,15 @@
 .f {
     display: flex;
     justify-content: center;
+    text-align: center;
+}
+
+a{
+    color: white;
+    text-decoration: none;
+    font-weight: lighter;
+
+    &:hover{
+        cursor: pointer;
+    }
 }
