--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="doSomething(f)" #f="ngForm">
     <div id="inputContainer">
-        <input type="text" placeholder="First Name" name="firstName" ngModel required>
-        <input type="text" placeholder="Last Name" name="lastName" ngModel required>
+        <input type="text" placeholder="First Name" name="firstName" ngModel required mdInput>
+        <input type="text" placeholder="Last Name" name="lastName" ngModel required mdInput>
     </div>
     <div class="button">
         <button type="submit" [disabled]="!f.valid">SUBMIT</button>
