--- a/src/app/user-info/user-info.component.less
+++ b/src/app/user-info/user-info.component.less
@@ -8,8 +8,19 @@
     justify-content: center;
 }
 
+button{
+    font-size: 12px;
+    background-color: white;
+    padding: 5px 10px;
+    border: none;
+}
+
 input {
     margin: 10px;
+    padding: 3px;
+    font-size: 14px;
+    border-radius: 1px;
+    border: none;
 }
 
 form {
